# schema2model

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  main.py  pyproject.toml
.github/workflows/: main.yml
src/jsonschema2pydantic/: __init__.py
tests/: test_jsonschema2pydantic.py  test_schema2model.py
tests/examples/: bytes_model.py  constrained_model.py  datetime_model.py  discriminated_union_model.py  enum_model.py  field_metadata_model.py  foobar_model.py  int_enum_model.py  list_model.py  literal_model.py  multi_literal_model.py  nested_models.py  pattern_model.py  recursive_model.py  root_model.py  set_model.py  simple_model.py  tuple_model.py  url_model.py  user.py  uuid_model.py
