[project]
name = "jsonschema2pydantic"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pydantic>=2.12.5",
]

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
    "pyright>=1.1.407",
    "pytest>=9.0.1",
    "ruff>=0.14.7",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.pyright]
include = ["src"]
typeCheckingMode = "standard"

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
