[project]
name = "schema2model"
version = "0.1.0"
description = "Convert JSON Schema to Pydantic models"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    {name = "Till Hoffmann"},
]
keywords = ["json-schema", "pydantic", "code-generation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Code Generators",
    "Typing :: Typed",
]
dependencies = [
    "pydantic>=2.12.5",
]

[project.urls]
Homepage = "https://github.com/tillahoffmann/schema2model"
Repository = "https://github.com/tillahoffmann/schema2model"
Issues = "https://github.com/tillahoffmann/schema2model/issues"

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
    "pyright>=1.1.407",
    "pytest>=9.0.1",
    "ruff>=0.14.7",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.pyright]
include = ["src"]
typeCheckingMode = "standard"

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
